--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,9 +5,18 @@
   margin: 0;
   font-size: 0.95em;
 }
+ body {
+  background-image: url("../img/skydivers-home.jpg");  
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-color: white;
+ }
 
+nav .logo-PC {
+  display: none; 
+}
 
-nav img.logo {
+nav .logo-phone {
   display: inline-block;
   width: 80px;
 }
@@ -16,7 +25,6 @@ nav ul {
   float: right; /* corre la seccion a la iz, no pude hacerlo con flexbox */
   margin-right: 20px;
   list-style-type: none;
-
   /* display: flex;    
     flex-direction: row row-reverse;
     justify-content: space-between; */
@@ -25,8 +33,8 @@ nav ul {
 nav ul li {
   display: inline-block;
   margin: 11px 5px 5px;
+  color: white;
 }
-
 nav ul li a {
   text-decoration: none;
   font-weight: 500;
@@ -39,7 +47,7 @@ a:hover {
 
 .checkbtn {
   font-size: 20px;
-  color: rgb(44, 42, 42);
+  color: white;
   float: right;
   line-height: 42px;
   margin-right: 20px;
@@ -54,22 +62,50 @@ a:hover {
     pending
 } */
 
+body section {
+  width: 80vw;
+  height: 90vh;
+ 
+}
+
 footer p {
-    color: rgb(44, 42, 42);
-    font-size: 0.4em;
+    color: white;
+    font-size: 0.7em;
     margin: 2px 5px;
+    float: right;
 }
 
 
-@media (min-width: 445px) {
+@media (min-width: 480px) {
+  nav {
+    background-color: white;
+  }
+  body ~ nav {
+    background-image: url("../img/skydivers-home.jpg");  
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-color: white;
+   }
     
+   nav .logo-PC {
+    display: inline-block;
+    width: 70px;     
+  }
+  
+  nav .logo-phone {
+    display: none;
+    width: 80px;
+  }
+
   nav ul li a {
     display: inline-block;
   }
   nav ul li {
     display: inline-block;
     margin: 15px 5px 5px;
+    color: rgb(44, 42, 42);
   }
+  
   .checkbtn {
     display: none;
   }
