--- a/views/index.html
+++ b/views/index.html
@@ -21,7 +21,8 @@
     <label for="check" class="checkbtn">
     <i class="fa-solid fa-bars"></i>
   </label>
-    <img class="logo" src="img\logo-red-removebg.png" alt="logo-nav"/>
+    <img class="logo-PC" src="img\logo-red-removebg.png" alt="logo-nav-pc"/>
+    <img class="logo-phone" src="img\logowhite-removebg.png" alt="logo-nav-PC"/>
     <ul>
       <li><a class="active"  href="/">NOSOTROS</a></li>
       <li><a class="active" href="/">RESERVA TU SALTO</a></li>
@@ -32,8 +33,12 @@
     </ul>
   </nav>
   <body>
-    <section></section>
-    <img src="img\skydivers-home.jpg" alt="home" width="100%" />
+    <section>
+      <!-- <div class="fondo" style="background-image: url('img\skydivers-home.jpg')"></div> -->
+    </section> 
+
+    
+    <!-- <img src="img\skydivers-home.jpg" alt="home" width="100%" /> -->
   </body>
 
   <footer>
