--- a/views/index.html
+++ b/views/index.html
@@ -21,24 +21,21 @@
     <label for="check" class="checkbtn">
     <i class="fa-solid fa-bars"></i>
   </label>
-    <img class="logo-PC" src="img\logo-red-removebg.png" alt="logo-nav-pc"/>
+    <img class="logo-PC" src="img\logo-red-removebg2.png" alt="logo-nav-pc"/>
     <img class="logo-phone" src="img\logowhite-removebg.png" alt="logo-nav-PC"/>
     <ul>
-      <li><a class="active"  href="/">NOSOTROS</a></li>
+      <li><a class="active" href="/">NOSOTROS</a></li>
       <li><a class="active" href="/">RESERVA TU SALTO</a></li>
       <li><a class="active" href="/">REGISTRATE</a></li>
       <li><a class="active" href="/">LOGIN</a></li>
-      <li><i class="fa-solid fa-user-astronaut"></i></li>
-      <li><i class="fa-solid fa-cart-shopping"></i></li>
+      <li> <a href="/"> <i class="fa-solid fa-user-astronaut" id="user"></a></i></li>
+      <li> <a href="/"><i class="fa-solid fa-cart-shopping" id="cart"></a></i></li>
     </ul>
   </nav>
   <body>
     <section>
-      <!-- <div class="fondo" style="background-image: url('img\skydivers-home.jpg')"></div> -->
-    </section> 
 
-    
-    <!-- <img src="img\skydivers-home.jpg" alt="home" width="100%" /> -->
+    </section>   
   </body>
 
   <footer>
