Agregue una nav bar responsive pero en CCS

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,7 +6,7 @@
   font-size: 0.95em;
 }
  body {
-  background-image: url("../img/skydivers-home.jpg");  
+  background-image: url("../img/skydivers-phone.jpg");  
   background-size: cover;
   background-repeat: no-repeat;
   background-color: white;
@@ -56,12 +56,9 @@ nav ul li a.active {
 }
 
 #check {
-   display: none; /*segui un tutorial para el colapso del menu no estoy segura el funciona */
+  display: none;
+    /*segui un tutorial para el colapso del menu no estoy segura el funciona */
 }
-
-/* #check:checked  {
-    pending
-} */
 
 body section {
   width: 80vw;
@@ -76,17 +73,60 @@ footer p {
     float: right;
 }
 
+@media (max-width: 479px){
+  .checkbtn {
+    display: block;    
+  }
+
+  ul {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background: rgba(94, 93, 93, 0.5);
+    top: 100px;
+    left: -100%; /*para sacar el menu de la vista */
+    text-align: center;
+    transition: all .5s;
+  }
+
+  nav ul li{
+    display: block;
+    margin: 25px 0;
+    line-height: 25px;
+    font-size: medium;
+  }
+  
+  nav ul li a.active {
+    display: inline-block;
+   text-decoration: none;
+   color:white;
+  }
+
+  #check:checked ~ ul {
+    left:0;
+  }
+  #check:checked ~ body; {
+    background-image: none;
+    background-color: rgb(150, 36, 32);
+  }
+}
+
+
+
 @media (min-width: 480px) {
   nav {
     background-color: white;
   }
-  body ~ nav {
+  /* body ~ nav {
     background-image: url("../img/skydivers-home.jpg");  
     background-size: cover;
     background-repeat: no-repeat;
     background-color: white;
+   } */
+   body{
+   background-image: url("../img/skydivers-home2.jpg"); 
    }
-    
+
    nav .logo-PC {
     display: inline-block;
     width: 70px;         
