--- a/views/index.html
+++ b/views/index.html
@@ -21,13 +21,12 @@
     <label for="check" class="checkbtn">
     <i class="fa-solid fa-bars"></i>
   </label>
-    <img class="logo-PC" src="img\logo-red-removebg2.png" alt="logo-nav-pc"/>
-    <img class="logo-phone" src="img\logowhite-removebg.png" alt="logo-nav-PC"/>
+    <a href="/"><img  class="logo-PC" src="img\logo-red-removebg2.png" alt="logo-nav-pc"/></a>
+    <a href="/"><img class="logo-phone" src="img\logowhite-removebg.png" alt="logo-nav-PC"/></a>
     <ul>
       <li><a class="active" href="/">NOSOTROS</a></li>
       <li><a class="active" href="/">RESERVA TU SALTO</a></li>
       <li><a class="active" href="/">REGISTRATE</a></li>
-      <li><a class="active" href="/">LOGIN</a></li>
       <li> <a href="/"> <i class="fa-solid fa-user-astronaut" id="user"></a></i></li>
       <li> <a href="/"><i class="fa-solid fa-cart-shopping" id="cart"></a></i></li>
     </ul>
