--- a/views/index.html
+++ b/views/index.html
@@ -33,6 +33,8 @@
   </nav>
   <body>
     <section>
+      <p id="mensajeHome">El paracaidismo no es sólo un deporte de diversión. Vivir la experiencia de <b>volar</b> puede 
+        generar un sentimiento tan profundo que, para muchos, puede significar un antes y después en sus vidas.</p>
 
     </section>   
   </body>
