arregles menores del home

--- a/views/index.html
+++ b/views/index.html
@@ -16,6 +16,7 @@
     ></script>
     <title>Skydive</title>
   </head>
+  <body>
   <nav>
     <input type="checkbox" id="check">
     <label for="check" class="checkbtn">
@@ -27,19 +28,22 @@
       <li><a class="active" href="/">NOSOTROS</a></li>
       <li><a class="active" href="/">RESERVA TU SALTO</a></li>
       <li><a class="active" href="/">REGISTRATE</a></li>
-      <li> <a href="/"> <i class="fa-solid fa-user-astronaut" id="user"></a></i></li>
-      <li> <a href="/"><i class="fa-solid fa-cart-shopping" id="cart"></a></i></li>
+      <li><a href="/"> <i class="fa-solid fa-user-astronaut" id="user"></a></i></li>
+      <li><a href="/"><i class="fa-solid fa-cart-shopping" id="cart"></a></i></li>
     </ul>
   </nav>
-  <body>
+  <main>
+
     <section>
       <p id="mensajeHome">El paracaidismo no es sólo un deporte de diversión. Vivir la experiencia de <b>volar</b> puede 
         generar un sentimiento tan profundo que, para muchos, puede significar un antes y después en sus vidas.</p>
 
     </section>   
-  </body>
-
+  
+  
   <footer>
     <p>© 2022 Skydive House, inc. </p>
   </footer>
+</main>
+</body>
 </html>
