--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -5,11 +5,20 @@
   margin: 0;
   font-size: 0.95em;
 }
- body {
+ body main {
   background-image: url("../img/skydivers-phone.jpg");  
   background-size: cover;
   background-repeat: no-repeat;
   background-color: white;
+  overflow: hidden;
+  background-position: left center;
+ }
+
+ nav {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 999;
  }
 
 nav .logo-PC {
@@ -152,7 +161,7 @@ footer p {
   }
 }
 @media (min-width: 580px){
-  body{
+  body main{
     background-image: url("../img/skydivers-home.jpg"); 
     }
 
