cree archivo productDetail.css, subi imagen altimetro-iconos.png, modifique el index.html y cree nueva pantalla productDetail.html

--- a/views/index.html
+++ b/views/index.html
@@ -26,7 +26,7 @@
     <a href="/"><img class="logo-phone" src="img\logowhite-removebg.png" alt="logo-nav-PC"/></a>
     <ul>
       <li><a class="active" href="/">NOSOTROS</a></li>
-      <li><a class="active" href="/">RESERVA TU SALTO</a></li>
+      <li><a class="active" href="/productDetail">RESERVA TU SALTO</a></li>
       <li><a class="active" href="/">REGISTRATE</a></li>
       <li><a href="/"> <i class="fa-solid fa-user-astronaut" id="user"></a></i></li>
       <li><a href="/"><i class="fa-solid fa-cart-shopping" id="cart"></a></i></li>
