--- a/views/index.html
+++ b/views/index.html
@@ -25,8 +25,8 @@
     <ul>
       <li><a class="active" href="/">NOSOTROS</a></li>
       <li><a class="active" href="/productDetail">RESERVA TU SALTO</a></li>
-      <li><a class="active" href="/">REGISTRATE</a></li>
-      <li><a href="/"> <i class="fa-solid fa-user-astronaut" id="user"></a></i></li>
+      <li><a class="active" href="/register">REGISTRATE</a></li>
+      <li><a href="/login"> <i class="fa-solid fa-user-astronaut" id="user"></a></i></li>
       <li><a href="/productCart"><i class="fa-solid fa-cart-shopping" id="cart"></a></i></li>
     </ul>
   </nav>
