--- a/views/productDetail.html
+++ b/views/productDetail.html
@@ -1,69 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css\productDetail.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Anek+Malayalam:wght@100;200;400;500&display=swap"
-      rel="stylesheet"/>
-    <script src="https://kit.fontawesome.com/96cdcb0a05.js" crossorigin="anonymous"></script>
-    <title>SkydiveHouse - Product Detail</title>
-  </head>
 
-  <body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css\productDetail.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Anek+Malayalam:wght@100;200;400;500&display=swap"
+    rel="stylesheet" />
+  <script src="https://kit.fontawesome.com/96cdcb0a05.js" crossorigin="anonymous"></script>
+  <title>SkydiveHouse - Product Detail</title>
+</head>
+
+<body>
   <nav>
     <input type="checkbox" id="check">
     <label for="check" class="checkbtn">
-    <i class="fa-solid fa-bars"></i>
-  </label>
-    <a href="/"><img  class="logo-PC" src="img\logo-red-removebg2.png" alt="logo-nav-pc"/></a>
-    <a href="/"><img class="logo-phone" src="img\logowhite-removebg.png" alt="logo-nav-PC"/></a>
+      <i class="fa-solid fa-bars"></i>
+    </label>
+    <a href="/"><img class="logo-PC" src="img\logo-red-removebg2.png" alt="logo-nav-pc" /></a>
+    <a href="/"><img class="logo-phone" src="img\logowhite-removebg.png" alt="logo-nav-PC" /></a>
     <ul>
       <li><a class="active" href="/">NOSOTROS</a></li>
-      <li><a class="active" href="/">RESERVA TU SALTO</a></li>
-      <li><a class="active" href="/">REGISTRATE</a></li>
-      <li><a href="/"> <i class="fa-solid fa-user-astronaut" id="user"></a></i></li>
-      <li><a href="/"><i class="fa-solid fa-cart-shopping" id="cart"></a></i></li>
+      <li><a class="active" href="/productDetail">RESERVA TU SALTO</a></li>
+      <li><a class="active" href="/register">REGISTRATE</a></li>
+      <li><a href="/login"> <i class="fa-solid fa-user-astronaut" id="user"></a></i></li>
+      <li><a href="/productCart"><i class="fa-solid fa-cart-shopping" id="cart"></a></i></li>
     </ul>
   </nav>
   <main>
     <div>
-        <a href="/"><img class= "saltoTandem" src= "img/skydive-tandem.jpg" alt= "imagen-salto-tandem"/></a>
+      <a href="/"><img class="saltoTandem" src="img/skydive-tandem.jpg" alt="imagen-salto-tandem" /></a>
     </div>
-    <div>  
-        <a href="/"><img class= "altimetro" src= "img/altimetro-iconos.png" alt= "imagen-altimetro"/></a>
-    </div>  
-    <div class="textoSaltoTandem">  
+    <div>
+      <a href="/"><img class="altimetro" src="img/altimetro-iconos.png" alt="imagen-altimetro" /></a>
+    </div>
+    <div class="textoSaltoTandem">
 
-        <p>Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet consectetur  veniam quam  consectetur Lorem ipsum dolor sit amet consectetur  veniam quam voluptate esse beatae aliquam!Lorem</p>
-      <div class= "precioSalto">
+      <p>Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet consectetur veniam quam consectetur Lorem
+        ipsum dolor sit amet consectetur veniam quam voluptate esse beatae aliquam!Lorem</p>
+      <div class="precioSalto">
         <h2> Salto Tandem </h2>
         <h2> $500.000</h2>
       </div>
-        <div class = "selectorBoton">
+      <div class="selectorBoton">
         <select name="selector">
 
-            <option>1</option>
-            <option>2</option>
-            <option>3</option>
-            <option>4</option>
-            <option>5</option>
-            
-            </select>
+          <option>1</option>
+          <option>2</option>
+          <option>3</option>
+          <option>4</option>
+          <option>5</option>
 
-            <div>
-                <h3> Añadir al Carrito </h3>
-            </div>
-       </div>       
+        </select>
+
+        <div>
+          <h3> Añadir al Carrito </h3>
+        </div>
+      </div>
 
   </main>
-  
+
   <footer>
     <p>© 2022 Skydive House, inc. </p>
   </footer>
 </body>
+
 </html>
