--- a/views/register.html
+++ b/views/register.html
@@ -5,16 +5,19 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/register.css">
-  <script src="https://kit.fontawesome.com/3d48e49b2f.js" crossorigin="anonymous"></script>
+  <!-- <link rel="stylesheet" href="css/register.css"> -->
+  <link rel="stylesheet" href="css/login.css">
+  <script src="https://kit.fontawesome.com/96cdcb0a05.js" crossorigin="anonymous"></script>
   <title>Skydives - Registro de Usuario</title>
 </head>
 
 <body>
   <header class="header">
     <div class="logo">
-      <a href="#"><img class="logo-phone" src="img/logo-red-removebg2.png" alt="logo" /></a>
+      <a href=""><img src="img/logoWhite-removebg.png" alt="logo" class="logo-phone"></a>
+      <a href="#"><img class="logo-pc" src="img/logo-red-removebg2.png" alt="logo" /></a>
+    </div>
+
     </div>
 
     <nav class="nav">
@@ -23,7 +26,8 @@
         <li class="bar-nav__item"><a class=" bar-nav__link" href="/">NOSOTROS</a></li>
         <li class="bar-nav__item"><a class="bar-nav__link" href="/productDetail">RESERVA TU SALTO</a></li>
         <li class="bar-nav__item"><a class="bar-nav__link" href="/register">REGISTRATE</a></li>
-        <li class="bar-nav__item"> <a class="bar-nav__link" href="/login"><i class="fa-solid fa-user"></i></a></li>
+        <li class="bar-nav__item"> <a class="bar-nav__link" href="/login"> <i
+              class="fa-solid fa-user-astronaut"></i></a></li>
         <li class="bar-nav__item"> <a href="/productCart"><i class="fa-solid fa-cart-shopping"></i></a></li>
       </ul>
     </nav>
@@ -50,6 +54,7 @@
         <label class="form-field__label" for=""><i class="fa-solid fa-lock form-field__icon"></i></label>
         <input class="form-field__input" type="password" placeholder="Confirm Password">
       </div>
+
       <button class="form-button">Create Account</button>
 
 
