--- a/views/login.html
+++ b/views/login.html
@@ -6,25 +6,30 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="stylesheet" href="css/register.css">
+
+  <!-- <link rel="stylesheet" href="css/register.css"> -->
   <link rel="stylesheet" href="css/login.css">
-  <script src="https://kit.fontawesome.com/3d48e49b2f.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/96cdcb0a05.js" crossorigin="anonymous"></script>
   <title>Skydives - Registro de Usuario</title>
 </head>
 
 <body>
+
   <header class="header">
     <div class="logo">
-      <a href="#"><img class="logo-phone" src="img/logo-red-removebg2.png" alt="logo" /></a>
+      <a href=""><img src="img/logoWhite-removebg.png" alt="logo" class="logo-phone"></a>
+      <a href="#"><img class="logo-pc" src="img/logo-red-removebg2.png" alt="logo" /></a>
     </div>
 
     <nav class="nav">
 
       <ul class="bar-nav">
-        <li class="bar-nav__item"><a class=" bar-nav__link" href="/">NOSOTROS</a></li>
+        <li class="bar-nav__item"><a class="bar-nav__link" href="/">NOSOTROS</a></li>
         <li class="bar-nav__item"><a class="bar-nav__link" href="/productDetail">RESERVA TU SALTO</a></li>
         <li class="bar-nav__item"><a class="bar-nav__link" href="/register">REGISTRATE</a></li>
-        <li class="bar-nav__item"> <a class="bar-nav__link" href="/login.html"><i class="fa-solid fa-user"></i></a></li>
+        <li class="bar-nav__item"> <a class="bar-nav__link" href="/login"> <i class="fa-solid fa-user-astronaut">
+
+            </i></a></li>
         <li class="bar-nav__item"> <a href="/productCart"><i class="fa-solid fa-cart-shopping"></i></a></li>
       </ul>
     </nav>
@@ -47,7 +52,7 @@
         <label class="form-field__label" for=""><i class="fa-solid fa-lock form-field__icon"></i></label>
         <input class="form-field__input" type="password" placeholder="Confirm Password">
       </div>
-      <p class="text-password"><i class="fa-regular fa-envelope form-field__icon"></i>Forget password?</p>
+      <p class="text-password"><i class="fa-regular fa-envelope form-field__icon icono_sobre"></i>Forget password?</p>
       <button class="form-button">login</button>
 
 
