fixed de los botones de login y register

--- a/views/login.html
+++ b/views/login.html
@@ -38,7 +38,7 @@
     </div>
   </header>
   <main class="main">
-    <form action="#" method="post" class="form">
+    <form  class="form">
       <div class="form-profile">
         <i class="fa-solid fa-user form-field__icon profile"></i>
 
