--- a/views/register.html
+++ b/views/register.html
@@ -36,7 +36,7 @@
     </div>
   </header>
   <main class="main">
-    <form action="#" method="post" class="form">
+    <form class="form">
       <h2 class="form-title">Sign up</h2>
       <div class="form-field">
         <label class="form-field__label" for="Username"><i class="fa-solid fa-user form-field__icon"></i></label>
