--- a/views/register.html
+++ b/views/register.html
@@ -28,7 +28,7 @@
         <li class="bar-nav__item"><a class="bar-nav__link" href="/register">REGISTRATE</a></li>
         <li class="bar-nav__item"> <a class="bar-nav__link" href="/login"> <i
               class="fa-solid fa-user-astronaut"></i></a></li>
-        <li class="bar-nav__item"> <a href="/productCart"><i class="fa-solid fa-cart-shopping"></i></a></li>
+        <li class="bar-nav__item"> <a class="bar-nav__link" href="/productCart"><i class="fa-solid fa-cart-shopping"></i></a></li>
       </ul>
     </nav>
     <div class="logo logo-right">
