arreglo de botones de las views register y login

--- a/views/login.html
+++ b/views/login.html
@@ -14,8 +14,8 @@
 <body>
   <header class="header">
     <div class="logo">
-      <a href=""><img src="img/logoWhite-removebg.png" alt="logo" class="logo-phone" /></a>
-      <a href="#"><img class="logo-pc" src="img/logo-red-removebg2.png" alt="logo" /></a>
+      <a href="/"><img src="img/logoWhite-removebg.png" alt="logo" class="logo-phone" /></a>
+      <a href="/"><img class="logo-pc" src="img/logo-red-removebg2.png" alt="logo" /></a>
     </div>
 
     <nav class="nav">
@@ -59,7 +59,7 @@
       <p class="text-password">
         <i class="fa-regular fa-envelope form-field__icon icono_sobre"></i>Forget password?
       </p>
-      <button class="form-button">login</button>
+      <input type="button" class="form-button" value="Login">
     </form>
   </main>
 </body>
