--- a/views/register.html
+++ b/views/register.html
@@ -14,8 +14,8 @@
 <body>
   <header class="header">
     <div class="logo">
-      <a href=""><img src="img/logoWhite-removebg.png" alt="logo" class="logo-phone"></a>
-      <a href="#"><img class="logo-pc" src="img/logo-red-removebg2.png" alt="logo" /></a>
+      <a href="/"><img src="img/logoWhite-removebg.png" alt="logo" class="logo-phone" /></a>
+      <a href="/"><img class="logo-pc" src="img/logo-red-removebg2.png" alt="logo" /></a>
     </div>
 
     </div>
@@ -28,7 +28,8 @@
         <li class="bar-nav__item"><a class="bar-nav__link" href="/register">REGISTRATE</a></li>
         <li class="bar-nav__item"> <a class="bar-nav__link" href="/login"> <i
               class="fa-solid fa-user-astronaut"></i></a></li>
-        <li class="bar-nav__item"> <a class="bar-nav__link" href="/productCart"><i class="fa-solid fa-cart-shopping"></i></a></li>
+        <li class="bar-nav__item"> <a class="bar-nav__link" href="/productCart"><i
+              class="fa-solid fa-cart-shopping"></i></a></li>
       </ul>
     </nav>
     <div class="logo logo-right">
@@ -54,8 +55,8 @@
         <label class="form-field__label" for=""><i class="fa-solid fa-lock form-field__icon"></i></label>
         <input class="form-field__input" type="password" placeholder="Confirm Password">
       </div>
-
-      <button class="form-button">Create Account</button>
+      <input type="button" class="form-button" value="Create Account">
+      <!-- <button class="form-button">Create Account</button> -->
 
 
     </form>
