--- a/public/css/login.css
+++ b/public/css/login.css
@@ -142,6 +142,7 @@ body {
   letter-spacing: 2px;
   color: #fff;
   transition: all 300ms;
+  cursor: pointer;
 }
 
 .form-field__label:hover,
@@ -153,6 +154,10 @@ body {
   font-size: 1.2rem;
 
   letter-spacing: 1.2px;
+}
+.icono_sobre {
+  color: black;
+  margin-right: 10px;
 }
 ::placeholder {
   text-align: center;
@@ -199,10 +204,7 @@ body {
     left: 0;
     margin-left: 3px;
   }
-  .icono_sobre {
-    color: black;
-    margin-right: 10px;
-  }
+
   .bar-nav__link:hover,
   .bar-nav__link i[class^="fa"]:hover {
     color: var(--secondary-color);
