--- a/public/css/login.css
+++ b/public/css/login.css
@@ -15,8 +15,7 @@ body {
   background-image: url("/img/skydive-login.jpg");
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: left center;
-  background-attachment: fixed;
+  background-position: center center;
   min-height: 100vh;
   margin: 0;
 }
@@ -68,7 +67,7 @@ body {
 }
 
 .form {
-  background-color: rgba(255 255 255 /0.8);
+  background-color: rgba(255 255 255 /0.5);
   max-width: 350px;
   margin-top: 45px;
   margin-left: auto;
@@ -212,6 +211,10 @@ body {
 }
 
 @media (min-width: 1200px) {
+  body {
+    background-size: contain;
+    background-position: center 50px;
+  }
   .main {
     max-width: 800px;
   }
