--- a/views/register.html
+++ b/views/register.html
@@ -5,8 +5,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- <link rel="stylesheet" href="css/register.css"> -->
+
   <link rel="stylesheet" href="css/login.css">
+  <link rel="stylesheet" href="css/register.css">
   <script src="https://kit.fontawesome.com/96cdcb0a05.js" crossorigin="anonymous"></script>
   <title>Skydives - Registro de Usuario</title>
 </head>
@@ -44,16 +45,17 @@
         <input class="form-field__input" type="text" placeholder="Username" id="Username">
       </div>
       <div class="form-field">
-        <label class="form-field__label" for=""><i class="fa-regular fa-envelope form-field__icon"></i></label>
-        <input class="form-field__input" type="email" placeholder="E - mail">
+        <label class="form-field__label" for="email"><i class="fa-regular fa-envelope form-field__icon"></i></label>
+        <input class="form-field__input" type="email" placeholder="E - mail" id="email">
       </div>
       <div class="form-field">
-        <label class="form-field__label" for=""><i class="fa-solid fa-lock form-field__icon"></i></label>
-        <input class="form-field__input" type="password" placeholder="Password">
+        <label class="form-field__label" for="password"><i class="fa-solid fa-lock form-field__icon"></i></label>
+        <input class="form-field__input" type="password" placeholder="Password" id="password">
       </div>
       <div class="form-field">
-        <label class="form-field__label" for=""><i class="fa-solid fa-lock form-field__icon"></i></label>
-        <input class="form-field__input" type="password" placeholder="Confirm Password">
+        <label class="form-field__label" for="confirm_password"><i
+            class="fa-solid fa-lock form-field__icon"></i></label>
+        <input class="form-field__input" type="password" placeholder="Confirm Password" id="confirm_password">
       </div>
       <input type="button" class="form-button" value="Create Account">
       <!-- <button class="form-button">Create Account</button> -->
