--- a/public/css/stylesCart.css
+++ b/public/css/stylesCart.css
@@ -1,10 +1,29 @@
+body.productCart {
+  font-family: 'Anek Malayalam', sans-serif;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-size: 0.95em;
+}
+
+nav.nav-home {
+  background-color: white;
+}
+
+section#paracaidasCart2 {
+  display: none;
+}
+
 main.cartBack1 {
   background-color: rgb(230, 230, 232);
   color: rgb(150, 36, 32);
   display: flex;
-  height: 100vh;
+  height: 80vh;
   margin-top: 15px;
   font-size: 1em;
+  padding: 16px;
+  justify-content: center;
+
 }
 
 section#calender-total2 {
@@ -12,8 +31,8 @@ section#calender-total2 {
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-
   width: 70vw;
+  margin-top: 10px;
 }
 
 section#PPCT-calendar3 {
@@ -23,16 +42,9 @@ section#PPCT-calendar3 {
   align-content: flex-end;
 }
 
-section#paracaidasCart2 {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 30vw;
-}
-section#paracaidasCart2 img {
-  width: 100%;
-  flex-basis: 100px;
-  flex-shrink: 0;
+
+section#PPCT-calendar3 {
+  margin-top: 30px;
 }
 
 section#PPCT-calendar3 div#PPCT,
@@ -59,6 +71,7 @@ div#totalCarrito {
   max-width: 20vw;
   font-weight: 500;
 }
+
 div#totalCarrito p {
   padding: 3%;
   font-weight: 500;
@@ -74,17 +87,22 @@ div#totalCarrito button {
   font-weight: 500;
   justify-content: center;
 }
+
 div#totalCarrito button:hover {
   background-color: rgb(207, 207, 207);
 }
+
 div#PPCT table {
   margin: 10px 5px 70px;
+  border: solid 1px rgb(141, 140, 140);
+  border-radius: 15px;
 }
+
 div#PPCT table th,
 td {
   text-align: center;
-  padding: 10px 20px;
-  font-size: 1.35em;
+  padding: 10px 10px;
+  font-size: 1em;
 }
 
 div#PPCT table th {
@@ -110,6 +128,7 @@ section#PPCT-calendar3 div img {
   nav .logo-phone {
     display: none;
   }
+
   .checkbtn i {
     color: rgb(44, 42, 42);
   }
@@ -120,6 +139,10 @@ section#PPCT-calendar3 div img {
   section#PPCT-calendar3 div img {
      /* width: 60vw; me desborda el box  */
 
+  main.cartBack1 {
+    height: 100vh;
+  }
+
   section#totalCart3 {
     flex: 0 0 70vw;
   }
@@ -128,6 +151,8 @@ section#PPCT-calendar3 div img {
     height: 100vh;
     flex: 0 0 70vw;
   }
+
+
 }
 
 @media (min-width: 900px) {
@@ -135,11 +160,33 @@ section#PPCT-calendar3 div img {
     flex-wrap: nowrap;
     align-items: center;
   }
+
+
   section#totalCart3 img,
   section#PPCT-calendar3 div img {
     width: 32vw;
   }
+
   main.cartBack1 {
     margin-top: 30px;
   }
+
+  section#paracaidasCart2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 30vw;
+  }
+
+  section#paracaidasCart2 img {
+    width: 100%;
+    flex-basis: 100px;
+    flex-shrink: 0;
+  }
 }
+
+
+
+
+
+ 
