--- a/views/index.html
+++ b/views/index.html
@@ -14,8 +14,8 @@
   <title>Skydive</title>
 </head>
 
-<body>
-  <nav>
+<body class="home">
+  <nav class="nav-home">
     <input type="checkbox" id="check">
     <label for="check" class="checkbtn">
       <i class="fa-solid fa-bars"></i>
