--- a/views/productDetail.html
+++ b/views/productDetail.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css\styles.css">
   <link rel="stylesheet" href="css\productDetail.css">
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -14,8 +15,8 @@
   <title>SkydiveHouse - Product Detail</title>
 </head>
 
-<body>
-  <nav>
+<body class="ProductDetail">
+  <nav class="nav-home">
     <input type="checkbox" id="check">
     <label for="check" class="checkbtn">
       <i class="fa-solid fa-bars"></i>
