--- a/views/productDetail.html
+++ b/views/productDetail.html
@@ -40,8 +40,7 @@
     </div>
     <div class="textoSaltoTandem">
 
-      <p>Lorem ipsum dolor sit amet consectetur Lorem ipsum dolor sit amet consectetur veniam quam consectetur Lorem
-        ipsum dolor sit amet consectetur veniam quam voluptate esse beatae aliquam!Lorem</p>
+      <p>El salto tándem es una técnica de altísima seguridad para la caída libre. Es una variación del paracaidismo convencional, en la que se salta junto a un instructor altamente capacitado, unidos por medio de un sistema de doble arnés. El salto se realiza a 4.000 metros de altura con un minuto de caída libre a 200 km/h.</p>
       <div class="precioSalto">
         <h2> Salto Tandem </h2>
         <h2> $500.000</h2>
@@ -58,7 +57,7 @@
         </select>
 
         <div>
-          <h3> Añadir al Carrito </h3>
+          <button> Añadir al Carrito </button>
         </div>
       </div>
 
