--- a/views/productCart.html
+++ b/views/productCart.html
@@ -30,6 +30,7 @@
               <li><a class="active" href="/register">REGISTRATE</a></li>
               <li><a href="/login"> <i class="fa-solid fa-user-astronaut" id="user"></a></i></li>
               <li><a href="/productCart"><i class="fa-solid fa-cart-shopping" id="cart"></a></i></li>
+              <img class="paracaidas-color" src="img\paracaidas-menu-removebg.png" alt="paracaidas">
             </ul>
           </nav>
     </header>
