--- a/public/css/productEdit.css
+++ b/public/css/productEdit.css
@@ -6,7 +6,7 @@
 :root {
   --primary-color: #2b2a29;
   --secondary-color: #962420;
-  --font: Helvetica, sans-serif;
+  --font: 'Anek Malayalam', sans-serif;
 }
 
 body {
