--- a/public/css/register.css
+++ b/public/css/register.css
@@ -6,7 +6,7 @@
 :root {
   --primary-color: #2b2a29;
   --secondary-color: #962420;
-  --font: Helvetica, sans-serif;
+  --font: 'Anek Malayalam', sans-serif;
 }
 
 body {
@@ -21,6 +21,12 @@ body {
   margin: 0;
   overflow: hidden;
 }
+
+/* LH - agregue .main */
+.main {  
+  padding-top: 130px;
+}
+
 @media (min-width: 1200px) {
   body {
     background-size: contain;
