--- a/views/productCart.ejs
+++ b/views/productCart.ejs
@@ -2,37 +2,13 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css\styles.css">
+    <%- include("./partials/head")%> 
     <link rel="stylesheet" href="css\stylesCart.css">
-       <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Anek+Malayalam:wght@100;200;400;500&display=swap"
-        rel="stylesheet" />
-    <script src="https://kit.fontawesome.com/96cdcb0a05.js" crossorigin="anonymous"></script>
-    <title>Skydive</title>
 </head>
 
 <body class="productCart">
     <header>
-        <nav class="nav-home">
-            <input type="checkbox" id="check">
-            <label for="check" class="checkbtn">
-              <i class="fa-solid fa-bars"></i>
-            </label>
-            <a href="/"><img class="logo-PC" src="img\logo-red-removebg2.png" alt="logo-nav-pc" /></a>
-            <a href="/"><img class="logo-phone" src="img\logowhite-removebg.png" alt="logo-nav-PC" /></a>
-            <ul>
-              <li><a class="active" href="/">NOSOTROS</a></li>
-              <li><a class="active" href="/productDetail">RESERVA TU SALTO</a></li>
-              <li><a class="active" href="/register">REGISTRATE</a></li>
-              <li><a href="/login"> <i class="fa-solid fa-user-astronaut" id="user"></a></i></li>
-              <li><a href="/productCart"><i class="fa-solid fa-cart-shopping" id="cart"></a></i></li>
-              <img class="paracaidas-color" src="img\paracaidas-menu-removebg.png" alt="paracaidas">
-            </ul>
-          </nav>
+        <%- include("./partials/navbar")%> 
     </header>
     <main class="cartBack1">
         <section id="paracaidasCart2">
@@ -82,9 +58,7 @@
         </section>
     </main>
 
-    <footer class="cartBack">
-        <p>© 2022 Skydive House, inc. </p>
-    </footer>
+    <%- include("./partials/footer")%> 
 </body>
 
 </html>
